updated the API to read any link
